--- a/src/Makefile
+++ b/src/Makefile
@@ -9,7 +9,7 @@ KERNEL_CONFIG = -DMAX_CORE=${MAX_CORE} -DARCH=${ARCH} -DARCH_FOLDER=${ARCH_FOLDE
 
 KERNEL_DIR = kernel
 
-CC = gcc-9
+CC = gcc
 LOGS = #-DAPIC_DEBUG  -DVMM_DEBUG -DPMM_DEBUG -DIDT_DEBUG -DGDT_DEBUG
 
 CFLAGS = -Wall -Wextra -Ofast -DPTESTS -I$(ARCH_FOLDER)/$(ARCH)/include/ -I$(KERNEL_DIR)/include/ $(LOGS) -g $(KERNEL_CONFIG)
